--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,7 @@ insert_final_newline = true
 
 [*.md]
 trim_trailing_whitespace = false
-indent_size = 4
+indent_size = 2
 
 [*.html]
 indent_size = 2
@@ -29,9 +29,9 @@ indent_size = 2
 [*.yaml]
 indent_size = 2
 
-[.run/*.xml]
-indent_style = space
+[*.json]
 indent_size = 2
 
-[package.json]
+[.run/*.xml]
+indent_style = space
 indent_size = 2
