--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,25 @@
+black==23.3.0
+cachetools==5.3.0
 certifi==2022.12.7
+chardet==5.1.0
 charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+distlib==0.3.6
+exceptiongroup==1.1.1
+filelock==3.12.0
 idna==3.4
+iniconfig==2.0.0
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.1
+platformdirs==3.5.0
+pluggy==1.0.0
+pyproject_api==1.5.1
+pytest==7.3.1
 requests==2.29.0
+tomli==2.0.1
+tox==4.5.1
+typing_extensions==4.5.0
 urllib3==1.26.15
+virtualenv==20.23.0
