--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires =
     tox>=4
-env_list = lint, py{37,38,39,310,311}
+env_list = lint, scripts, py{37,38,39,310,311}
 
 [testenv]
 description = run unit tests
@@ -17,3 +17,11 @@ skip_install = true
 deps =
     black==23.3
 commands = black {posargs:.}
+
+[testenv:scripts]
+description = run the package's CLI scripts
+commands =
+    translate --help
+    translate-missing --help
+    parse-i18n-file --help
+    sort-i18n-file --help
