Use tox to run the flake8 linter

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires =
     tox>=4
-env_list = lint, scripts, py{37,38,39,310,311}
+env_list = lint, scripts, py{38,39,310,311}
 
 [testenv]
 description = run unit tests
@@ -16,7 +16,11 @@ description = run linters
 skip_install = true
 deps =
     black==23.3
-commands = black {posargs:.}
+    flake8==6
+    flake8-pytest-style
+commands =
+    flake8 src tests
+    black {posargs:.}
 
 [testenv:scripts]
 description = run the package's CLI scripts
