--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,24 +7,28 @@ authors = [
     { name = "Tyler VanZanten", email = "tvanzanten@hypercision.com" }
 ]
 dependencies = [
-    "requests"
+    "requests",
 ]
 license = { file="LICENSE" }
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "black"
+    "black",
 ]
 test = [
     "pytest",
-    "tox"
+    "tox",
 ]
 
 [build-system]
