--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires =
     tox>=4
-env_list = lint, scripts, py{38,39,310,311}
+env_list = lint-fix, lint-test, py{38,39,310,311}
 
 [testenv]
 description = run unit tests
@@ -11,16 +11,22 @@ deps =
 commands =
     pytest {posargs:tests}
 
-[testenv:lint]
-description = run linters
+[testenv:lint-fix]
+description = run linters to reformat code
 skip_install = true
 deps =
     black==23.3
+commands =
+    black {posargs:.}
+
+[testenv:lint-test]
+description = run linters to detect issues
+skip_install = true
+deps =
     flake8==6
     flake8-pytest-style
 commands =
     flake8 src tests
-    black {posargs:.}
 
 [testenv:scripts]
 description = run the package's CLI scripts
