--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -26,3 +26,6 @@ FILEIO_REPORTER: false
 # yamllint disable-line rule:line-length
 FILTER_REGEX_EXCLUDE: "(CHANGELOG.md)"
 GROOVY_NPM_GROOVY_LINT_ARGUMENTS: ["--failon", "error"]
+JSON_PRETTIER_FILTER_REGEX_EXCLUDE: "(tests/resources/example_de.json)"
+YAML_PRETTIER_FILTER_REGEX_EXCLUDE: "(tests/cassettes/.*.yml)"
+YAML_YAMLLINT_FILTER_REGEX_EXCLUDE: "(tests/cassettes/.*.yml)"
