--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ exceptiongroup==1.1.1
 filelock==3.15.4
 idna==3.7
 iniconfig==2.0.0
+multidict==6.0.5
 mypy-extensions==1.0.0
 packaging==24.1
 pathspec==0.11.1
@@ -17,9 +18,13 @@ platformdirs==4.2.2
 pluggy==1.5.0
 pyproject-api==1.7.1
 pytest==8.3.2
+PyYAML==6.0.1
 requests==2.32.3
 tomli==2.0.1
 tox==4.16.0
 typing_extensions==4.12.2
 urllib3==1.26.19
+vcrpy==6.0.1
 virtualenv==20.26.3
+wrapt==1.16.0
+yarl==1.9.4
