--- a/tests/resources/example.properties
+++ b/tests/resources/example.properties
@@ -13,3 +13,6 @@ instructorService.removeSession.success={0} session removed.
 handshake.register.suspended.error=The trial period has ended for your account \
     and you can no longer use the application.
 handshake.register.disabledException.error=Instructor is disabled
+associatedGroupMessageText=\
+    Attendance actions made on this page will also be made for every session in this group.
+removedMultipleSessionsErrorsMessage=Errors: {0}. \n\n Sessions successfully removed: {1}
