--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 black==24.4.2
-cachetools==5.3.0
-certifi==2024.07.04
-chardet==5.1.0
-charset-normalizer==3.1.0
-click==8.1.3
+cachetools==5.4.0
+certifi==2024.7.4
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
-distlib==0.3.6
+distlib==0.3.8
 exceptiongroup==1.1.1
-filelock==3.12.0
+filelock==3.15.4
 idna==3.7
 iniconfig==2.0.0
 mypy-extensions==1.0.0
-packaging==23.1
+packaging==24.1
 pathspec==0.11.1
-platformdirs==3.5.0
-pluggy==1.0.0
-pyproject_api==1.5.1
-pytest==7.3.1
+platformdirs==4.2.2
+pluggy==1.5.0
+pyproject-api==1.7.1
+pytest==8.3.2
 requests==2.32.3
 tomli==2.0.1
-tox==4.5.1
-typing_extensions==4.5.0
+tox==4.16.0
+typing_extensions==4.12.2
 urllib3==1.26.19
-virtualenv==20.23.0
+virtualenv==20.26.3
