Add test for value with escaped newlines

--- a/tests/cassettes/test_translate_file.yml
+++ b/tests/cassettes/test_translate_file.yml
@@ -3,7 +3,9 @@ interactions:
     body: '[{"text": "The device limit of {0} devices has been reached \\\n    for
       your company''''s account and new devices cannot use the application. Please
       contact your \\\n    administrator."}, {"text": "Segment with segmentID {0}
-      \\\n    not found in the SessionItem''s segments"}, {"text": "first!"}]'
+      \\\n    not found in the SessionItem''s segments"}, {"text": "first!"}, {"text":
+      "For issues with the software, tablets, and card scanners \\\n    only, please
+      contact Tina Herring at \\n\\\n    \\n\\\n    \\ Email: tina.herring@yourcompany.com"}]'
     headers:
       Accept:
       - '*/*'
@@ -12,7 +14,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '293'
+      - '469'
       Content-Type:
       - application/json
       Ocp-Apim-Subscription-Region:
@@ -26,30 +28,33 @@ interactions:
       string: "[{\"translations\":[{\"text\":\"O limite de dispositivos de {0} foi
         atingido \\\\\\n    para a conta da sua empresa e novos dispositivos n\xE3o
         podem usar o aplicativo. Por favor, entre em contato com o seu \\\\\\n    administrador.\",\"to\":\"pt\"}]},{\"translations\":[{\"text\":\"Segmentar
-        com segmentID {0} \\\\\\n    n\xE3o encontrado nos segmentos do SessionItem\",\"to\":\"pt\"}]},{\"translations\":[{\"text\":\"primeiro!\",\"to\":\"pt\"}]}]"
+        com segmentID {0} \\\\\\n    n\xE3o encontrado nos segmentos do SessionItem\",\"to\":\"pt\"}]},{\"translations\":[{\"text\":\"primeiro!\",\"to\":\"pt\"}]},{\"translations\":[{\"text\":\"Para
+        problemas com o software, tablets e scanners de cart\xE3o \\\\\\n    apenas,
+        entre em contato com Tina Herring em \\\\n\\\\\\n    \\\\n\\\\\\n    \\\\
+        E-mail: tina.herring@yourcompany.com\",\"to\":\"pt\"}]}]"
     headers:
-      Access-Control-Expose-Headers:
-      - X-RequestId
-      - X-Metered-Usage
-      - X-MT-System
       Connection:
       - keep-alive
       Content-Type:
       - application/json; charset=utf-8
       Date:
-      - Fri, 09 Aug 2024 20:39:14 GMT
+      - Tue, 18 Feb 2025 20:45:41 GMT
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains
       Transfer-Encoding:
       - chunked
-      X-Content-Type-Options:
+      access-control-expose-headers:
+      - X-RequestId,X-Metered-Usage,X-MT-System
+      x-content-type-options:
       - nosniff
-      X-MT-System:
+      x-envoy-upstream-service-time:
+      - '305'
+      x-metered-usage:
+      - '398'
+      x-mt-system:
       - Microsoft
-      X-Metered-Usage:
-      - '245'
-      X-RequestId:
-      - e623054c-495d-4183-9716-6cbe46e9eae5.USE2.0809T2039
+      x-requestid:
+      - 5258f474-297e-402c-b666-9257f45b35ac.USE2.0218T2045
     status:
       code: 200
       message: OK
