--- a/tests/resources/example2.properties
+++ b/tests/resources/example2.properties
@@ -6,3 +6,7 @@ recordAttendance.segment.notFound.error=Segment with segmentID {0} \
     not found in the SessionItem's segments
 
 me=first!
+clientHelpText=For issues with the software, tablets, and card scanners \
+    only, please contact Tina Herring at \n\
+    \n\
+    \ Email: tina.herring@yourcompany.com
