Require Python 3.10+, update Python requirements

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires =
     tox>=4
-env_list = lint-fix, lint-test, py{38,39,310,311}
+env_list = lint-fix, lint-test, py{310,311,313,314}
 
 [testenv]
 description = run unit tests
@@ -24,7 +24,7 @@ commands =
 description = run linters to detect issues
 skip_install = true
 deps =
-    flake8==6
+    flake8>=7
     flake8-pytest-style
 commands =
     flake8 src tests
