Update pyproject.toml to fix building and publishing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ test = [
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [project.urls]
 "Homepage" = "https://github.com/hypercision/i18ntools"
 "Bug Reports" = "https://github.com/hypercision/i18ntools/issues"
